--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -127,11 +127,11 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 200px;
     border-radius: 0%;
 
     @include breakpoint($large) {
-      padding: 5px;
+      padding: 0px;
       border: 1px solid $border-color;
     }
   }
@@ -172,6 +172,8 @@
 
 .author__bio {
   margin: 0;
+  font-size: .9em;
+  font-style: italic;
 
   @include breakpoint($large) {
     margin-top: 10px;
